[tool.poetry]
name = "edge_sim_py"
version = "1.1.0"
description = "Python-based modeling and simulation framework for Edge Computing resource management policies"
authors = ["Paulo Severo <paulo.severo@edu.pucrs.br>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"  ### was before installing pyRAPL
#python = ">=3.7"
Mesa = "^1.0.0"
networkx = "2.6.3"
msgpack = "^1.0.4"
numpy = "<2"
pyrapl = "^0.2.3.1"
psutil = "^6.0.0"
scikit-learn = "^1.5.2"
matplotlib = "3.5.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
gym = "^0.26.2"
gymnasium = "^1.0.0"
ipython = "^8.29.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.2"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 130